Prevent index page sidebar from going off screen

--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -81,7 +81,7 @@
 }
 
 #newclientbox {
-	padding: 0 30px 20px 30px;
+	padding: 0 0 20px 30px;
     border-bottom: 1px solid #c9c9c9;
     text-align: right;
 }
